fix container / add slider

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -48,11 +48,15 @@ ul {
 .container {
   margin: 0 auto;
   padding: 0 15px;
-  max-width: 1410;
+  max-width: 1410px;
 
   &-narrow {
     max-width: 1240px;
   }
+}
+
+.title {
+  position: relative;
 }
 
 .burger {
