--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,7 +8,8 @@
 @import "./components/header";
 @import "./components/menu";
 @import "./components/search";
-@import "./components/slide";
+@import "./components/hero-slide";
+@import "./components/product";
 //
 
 //
