add manufacture section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,7 +9,8 @@
 @import "./components/menu";
 @import "./components/search";
 @import "./components/hero-slide";
-@import "./components/product";
+@import "./components/product-categories";
+@import "./components/manufacture";
 //
 
 //
