--- a/src/scss/components/_manufacture.scss
+++ b/src/scss/components/_manufacture.scss
@@ -1,7 +1,6 @@
 .manufacture {
   position: relative;
-  margin-bottom: 75px;
-
+  margin-bottom: 75px; 
   &__content {
     max-width: 1050px;
     padding: 0 15px;
@@ -32,6 +31,7 @@
     img {
       object-fit: cover;
       display: block;
+      height: 100%;
     }
   }
 }
