--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,7 +11,6 @@
 @import "./components/hero-slide";
 @import "./components/product-categories";
 @import "./components/manufacture";
-//
-
+@import "./components/featured";
 //
 @import "./components/footer";
