--- a/src/scss/components/_featured.scss
+++ b/src/scss/components/_featured.scss
@@ -1,6 +1,6 @@
 .featured {
   margin-bottom: 95px;
-  
+
   .container {
     text-align: center;
   }
@@ -22,9 +22,6 @@
   border: 1px solid rgba(0, 61, 121, 0.2);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
   &__image {
     width: 240px;
     height: 220px;
@@ -45,10 +42,10 @@
     color: var(--color-blue);
     text-transform: uppercase;
     margin-bottom: 20px;
+    flex-grow: 1;
   }
 
   &__quote {
-    margin-top: auto;
     display: inline-block;
     font-weight: 700;
     line-height: 40px;
