--- a/src/scss/components/_product-categories.scss
+++ b/src/scss/components/_product-categories.scss
@@ -43,10 +43,11 @@
     width: 235px;
     height: 200px;
     overflow: hidden;
-    box-shadow: 1px 0 18px rgba(0, 0, 0, 0.1);
 
     img {
       display: block;
+      object-fit: cover;
+      height: 100%;
     }
 
     &:hover {
