--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -1,4 +1,4 @@
-@import "./mixins/breakpoint";
+@import "./mixins/mobile";
 @import "./mixins/visually-hidden";
 @import "./mixins/burger";
 @import "./mixins/font-face";
