--- a/src/scss/components/_hero-slide.scss
+++ b/src/scss/components/_hero-slide.scss
@@ -19,6 +19,9 @@
     text-align: center;
     color: var(--color-white);
     font-weight: 700;
+    @include max-screen(475px) {
+      padding: 0 15px;
+    }
   }
 
   &__title {
@@ -26,6 +29,13 @@
     line-height: 68px;
     max-width: 700px;
     margin-bottom: 25px;
+    @include max-screen(1020px) {
+      font-size: 30px;
+      line-height: 1.3;
+    }
+    @include max-screen(730px) {
+      font-size: 2em;
+    }
   }
 
   &__more {
@@ -36,7 +46,10 @@
     text-transform: uppercase;
     border-radius: 6px;
     transition: all 0.25s ease-in-out;
-
+    @include max-screen(1020px) {
+      line-height: 30px;
+      padding: 0 35px;
+    }
     &:hover,
     &:focus {
       background-color: var(--color-blue);
@@ -48,6 +61,11 @@
 
     img {
       display: block;
+
+      @include max-screen(800px) {
+        height: 100%;
+        object-fit: cover;
+      }
     }
 
     &::before {
