--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -2,6 +2,36 @@
   display: flex;
   align-items: center;
 
+  &__list {
+    @include max-screen(768px) {
+      position: absolute;
+      left: 0;
+      top: 0;
+      bottom: 0;
+      z-index: 9;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+
+      width: 65vw;
+      padding: 20px;
+
+      background-color: var(--color-white);
+      transform: translateX(calc(-100% + 1px));
+
+      box-shadow: 0 10px 10px rgba($color: #000, $alpha: 0.1);
+      transition: all 0.25s ease-in-out;
+      &--active {
+        transform: translateX(0);
+      }
+      .menu__item + .menu__item {
+        margin-left: 0;
+      }
+    }
+  }
+
   &__item {
     display: inline-block;
     & + & {
