--- a/src/scss/components/_product-categories.scss
+++ b/src/scss/components/_product-categories.scss
@@ -12,13 +12,20 @@
 .product-slider {
   .slick-arrow {
     position: absolute;
-    z-index: 11;
+    z-index: 5;
     top: 50%;
     left: -6%;
     width: 50px;
     height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transform: translateY(-50%);
     cursor: pointer;
+    @include max-screen(1360px) {
+      left: 0;
+      background-color: var(--color-white);
+    }
 
     svg {
       width: 15px;
@@ -29,6 +36,9 @@
   .slick-next {
     left: auto;
     right: -6%;
+    @include max-screen(1360px) {
+      right: 0;
+    }
   }
 
   .slick-slide {
@@ -47,6 +57,7 @@
     img {
       display: block;
       object-fit: cover;
+      width: 100%;
       height: 100%;
     }
 
