--- a/src/scss/components/_featured.scss
+++ b/src/scss/components/_featured.scss
@@ -54,5 +54,10 @@
     background-color: var(--color-cerulean);
     color: var(--color-white);
     border-radius: 6px;
+    transition: all 0.25s ease-in-out;
+
+    &:hover {
+      background-color: var(--color-blue);
+    }
   }
 }
