--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -16,7 +16,7 @@
       }
 
       @include max-screen(970px) {
-        margin: 0 20px;
+        margin: 10px 20px;
       }
       @include max-screen(665px) {
         margin: 10px;
