--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -89,6 +89,11 @@ ul {
     background-color: var(--color-blue);
     transform: translateX(-50%);
   }
+
+  @include max-screen(400px) {
+    font-size: 24px;
+    line-height: 50px;
+  }
 }
 
 .site-container {
