--- a/src/scss/components/_featured.scss
+++ b/src/scss/components/_featured.scss
@@ -28,7 +28,7 @@
     margin-bottom: 15px;
 
     img {
-      object-fit: cover;
+      object-fit: contain;
       width: 100%;
       height: 100%;
       display: block;
