--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -44,11 +44,10 @@
   }
 
   &__columns {
-    &-top {
+    &-social {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin-bottom: 30px;
     }
     &-title {
       margin-bottom: 10px;
@@ -124,7 +123,7 @@
   }
 }
 .footer-form {
-  width: 255px;
+  max-width: 255px;
 
   @include max-screen(1110px) {
     order: -1;
